--- a/res/layout/network_row.xml
+++ b/res/layout/network_row.xml
@@ -18,41 +18,31 @@
  *  
  *  Bryan Emmanuel piusvelte@gmail.com
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:background="@drawable/field"
-	android:orientation="horizontal"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:padding="8dip">
-	<ImageView
-		android:layout_width="wrap_content"
-		android:layout_height="fill_parent"
-		android:gravity="center_vertical"
-		android:layout_marginRight="8dip"
-		android:src="@drawable/network"/>
-	<LinearLayout
-		android:orientation="vertical"
-		android:layout_width="wrap_content"
-		android:layout_height="fill_parent"
-		android:layout_weight="1">
-		<TextView
-			android:layout_height="fill_parent"
-			android:layout_width="wrap_content"
-			android:layout_weight="1"
-			android:textStyle="bold"
-			android:id="@+id/network_row_SSID"
-			android:textColor="@color/primary"/>
-		<TextView
-			android:layout_height="fill_parent"
-			android:layout_width="wrap_content"
-			android:layout_weight="1"
-			android:id="@+id/network_row_BSSID"
-			android:textColor="@color/secondary"/>
-		<TextView
-			android:layout_height="fill_parent"
-			android:layout_width="wrap_content"
-			android:layout_weight="1"
-			android:id="@+id/network_row_status"
-			android:textColor="@color/primary"/>
-	</LinearLayout>
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:background="@drawable/field" android:layout_width="fill_parent"
+	android:layout_height="wrap_content" android:padding="8dip">
+	<ImageView android:id="@+id/network_icon"
+		android:layout_width="wrap_content" android:layout_height="fill_parent"
+		android:gravity="center_vertical" android:layout_marginRight="8dip"
+		android:src="@drawable/network" android:layout_alignParentTop="true"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentBottom="true" />
+	<CheckBox android:id="@+id/network_manage"
+		android:layout_width="wrap_content" android:layout_height="fill_parent"
+		android:layout_alignParentTop="true" android:layout_alignParentRight="true"
+		android:layout_alignParentBottom="true" />
+	<TextView android:layout_height="wrap_content"
+		android:layout_width="fill_parent" android:textStyle="bold"
+		android:id="@+id/network_row_SSID" android:textColor="@color/primary"
+		android:layout_alignParentTop="true" android:layout_toRightOf="@id/network_icon"
+		android:layout_toLeftOf="@id/network_manage" />
+	<TextView android:layout_height="wrap_content"
+		android:layout_width="fill_parent" android:id="@+id/network_row_BSSID"
+		android:textColor="@color/secondary" android:layout_below="@id/network_row_SSID"
+		android:layout_toRightOf="@id/network_icon" android:layout_toLeftOf="@id/network_manage" />
+	<TextView android:layout_height="wrap_content"
+		android:layout_width="fill_parent" android:id="@+id/network_row_status"
+		android:textColor="@color/primary" android:layout_alignParentBottom="true"
+		android:layout_toRightOf="@id/network_icon" android:layout_toLeftOf="@id/network_manage"
+		android:layout_below="@id/network_row_BSSID" />
+</RelativeLayout>
