--- a/res/layout/cell_row.xml
+++ b/res/layout/cell_row.xml
@@ -18,57 +18,42 @@
  *  
  *  Bryan Emmanuel piusvelte@gmail.com
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:background="@drawable/field"
-	android:orientation="horizontal"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:padding="8dip">
-	<ImageView
-		android:layout_width="wrap_content"
-		android:layout_height="fill_parent"
-		android:gravity="center_vertical"
-		android:layout_marginRight="8dip"
-		android:src="@drawable/cell"/>
-	<TableLayout
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:background="@drawable/field" android:layout_width="fill_parent"
+	android:layout_height="wrap_content" android:padding="8dip">
+	<ImageView android:id="@+id/cell_icon" android:layout_width="wrap_content"
+		android:layout_height="fill_parent" android:gravity="center_vertical"
+		android:layout_marginRight="8dip" android:src="@drawable/cell"
+		android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
+		android:layout_alignParentBottom="true" />
+	<CheckBox android:id="@+id/cell_manage" android:layout_width="wrap_content"
+		android:layout_height="fill_parent" android:focusable="false"
+		android:layout_alignParentRight="true" android:layout_alignParentTop="true"
+		android:layout_alignParentBottom="true" />
+	<TableLayout android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:layout_toRightOf="@id/cell_icon"
+		android:layout_toLeftOf="@id/cell_manage"
+		android:layout_alignParentTop="true" android:layout_alignParentBottom="true"
 		android:stretchColumns="0">
 		<TableRow>
-			<TextView
-				android:textColor="@color/secondary"
-				android:text="@string/label_CID"/>
-			<TextView
-				android:textColor="@color/secondary"
-				android:id="@+id/cell_row_CID"
-				android:gravity="right"/>
+			<TextView android:textColor="@color/secondary" android:text="@string/label_CID" />
+			<TextView android:textColor="@color/secondary" android:id="@+id/cell_row_CID"
+				android:gravity="right" />
 		</TableRow>
 		<TableRow>
-			<TextView
-				android:textColor="@color/secondary"
-				android:text="@string/label_LAC"/>
-			<TextView
-				android:textColor="@color/secondary"
-				android:id="@+id/cell_row_LAC"
-				android:gravity="right"/>
+			<TextView android:textColor="@color/secondary" android:text="@string/label_LAC" />
+			<TextView android:textColor="@color/secondary" android:id="@+id/cell_row_LAC"
+				android:gravity="right" />
 		</TableRow>
 		<TableRow>
-			<TextView
-				android:textColor="@color/secondary"
-				android:text="@string/range"/>
-			<TextView
-				android:textColor="@color/secondary"
-				android:id="@+id/cell_row_range"
-				android:gravity="right"/>
+			<TextView android:textColor="@color/secondary" android:text="@string/range" />
+			<TextView android:textColor="@color/secondary" android:id="@+id/cell_row_range"
+				android:gravity="right" />
 		</TableRow>
 		<TableRow>
-			<TextView
-				android:textColor="@color/primary"
-				android:text="@string/status"/>
-			<TextView
-				android:id="@+id/cell_row_status"
-				android:textColor="@color/primary"
-				android:gravity="right"/>
+			<TextView android:textColor="@color/primary" android:text="@string/status" />
+			<TextView android:id="@+id/cell_row_status"
+				android:textColor="@color/primary" android:gravity="right" />
 		</TableRow>
 	</TableLayout>
-</LinearLayout>
+</RelativeLayout>
