--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -24,10 +24,10 @@
 	android:layout_height="fill_parent" android:textSize="16dip">
 	<com.admob.android.ads.AdView android:id="@+id/ad"
 		android:visibility="gone" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_alignParentTop="true"
+		android:layout_height="wrap_content" android:layout_alignParentBottom="true"
 		app:backgroundColor="@color/tertiary" app:primaryTextColor="@color/primary"
 		app:secondaryTextColor="@color/secondary" />
-	<ScrollView android:layout_below="@id/ad"
+	<ScrollView android:layout_above="@id/ad"
 		android:layout_width="fill_parent" android:layout_height="fill_parent">
 		<LinearLayout android:layout_width="fill_parent"
 			android:layout_height="fill_parent" android:orientation="vertical">
