--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -24,7 +24,7 @@
 	android:layout_height="fill_parent">
 	<com.admob.android.ads.AdView android:id="@+id/ad"
 		android:visibility="gone" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_alignParentTop="true"
+		android:layout_height="wrap_content" android:layout_alignParentBottom="true"
 		app:backgroundColor="@color/tertiary" app:primaryTextColor="@color/primary"
 		app:secondaryTextColor="@color/secondary" />
 	<com.google.android.maps.MapView
@@ -33,6 +33,6 @@
 		android:clickable="true"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		android:layout_below="@id/ad"
+		android:layout_above="@id/ad"
 		android:apiKey="0gPRuHgQacrF1UiGJOhy3pqZM2Xwk7qNfNyTP1A" />
 </RelativeLayout>
