--- a/res/layout/networks_list.xml
+++ b/res/layout/networks_list.xml
@@ -23,19 +23,16 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:textSize="14dip">
-	<com.admob.android.ads.AdView android:id="@+id/ad"
-		android:visibility="gone" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_alignParentBottom="true"
-		app:backgroundColor="@color/tertiary" app:primaryTextColor="@color/primary"
-		app:secondaryTextColor="@color/secondary" />
+	<LinearLayout android:id="@+id/ad" android:layout_width="fill_parent"
+		android:layout_height="wrap_content"></LinearLayout>
  	<ListView android:id="@android:id/list"
+ 		android:layout_below="@id/ad"
 		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
-		android:layout_above="@id/ad" />
+		android:layout_height="fill_parent" />
 	<TextView android:id="@android:id/empty"
+ 		android:layout_below="@id/ad"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		android:layout_above="@id/ad"
   		android:textColor="@color/primary"
   		android:text="@string/no_networks"/>
 </RelativeLayout>
