--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -23,7 +23,7 @@
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" android:textSize="16dip">
 	<LinearLayout android:id="@+id/ad" android:layout_width="fill_parent"
-		android:layout_height="wrap_content"></LinearLayout>
+		android:layout_height="wrap_content" />
 	<ScrollView android:layout_below="@id/ad" android:layout_width="fill_parent" android:layout_height="fill_parent">
 		<LinearLayout android:layout_width="fill_parent"
 			android:layout_height="fill_parent" android:orientation="vertical">
