--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -23,7 +23,7 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 	<LinearLayout android:id="@+id/ad" android:layout_width="fill_parent"
-		android:layout_height="wrap_content"></LinearLayout>
+		android:layout_height="wrap_content" />
 	<com.google.android.maps.MapView
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:id="@+id/mapview"
