--- a/res/values/keys.xml
+++ b/res/values/keys.xml
@@ -28,7 +28,7 @@
     <string name="key_interval">interval</string>
     <string name="key_battery_override">battery_override</string>
     <string name="key_battery_percentage">battery_percentage</string>
-    <string name="key_manual_override">manual_override</string>
+    <!--<string name="key_manual_override">manual_override</string>-->
     <string name="key_noclear">noclear</string>
     <string name="key_persistent_status">persistent_status</string>
     <string name="key_wifi_sleep">wifi_sleep</string>
