--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -22,9 +22,11 @@
 	xmlns:app="http://schemas.android.com/apk/res/com.piusvelte.wapdroid"
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" android:textSize="16dip">
-	<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
+	<LinearLayout android:id="@+id/ad" android:layout_width="fill_parent"
+		android:layout_height="wrap_content" />
+	<ScrollView android:layout_below="@id/ad" android:layout_width="fill_parent" android:layout_height="fill_parent">
 		<LinearLayout android:layout_width="fill_parent"
-			android:layout_height="wrap_content" android:orientation="vertical">
+			android:layout_height="fill_parent" android:orientation="vertical">
 			<TableLayout android:background="@drawable/field"
 				android:layout_width="fill_parent" android:layout_height="wrap_content"
 				android:paddingTop="10dip" android:paddingRight="12dip"
