--- a/core/res/values/keys.xml
+++ b/core/res/values/keys.xml
@@ -36,4 +36,5 @@
     <string name="key_wifi_sleep_charging">wifi_sleep_charging</string>
     <string name="key_wifi_override_charging">wifi_override_charging</string>
     <string name="key_logging">logging</string>
+    <string name="key_version">version</string>
 </resources>
