--- a/core/res/layout/cell_row.xml
+++ b/core/res/layout/cell_row.xml
@@ -20,15 +20,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dip">
+    android:paddingLeft="@dimen/fields_horizontal_padding"
+    android:paddingRight="@dimen/fields_horizontal_padding">
 
     <ImageView
         android:id="@+id/cell_icon"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:layout_marginRight="8dip"
         android:gravity="center_vertical"
         android:src="@drawable/cell" />
@@ -37,24 +36,21 @@
         android:id="@+id/cell_manage"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:focusable="false" />
+        android:focusable="false"
+        android:gravity="center_vertical" />
 
     <TableLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true"
+        android:layout_height="match_parent"
         android:layout_toLeftOf="@id/cell_manage"
         android:layout_toRightOf="@id/cell_icon"
+        android:gravity="center_vertical"
         android:stretchColumns="0">
 
         <TableRow>
 
-            <TextView
-                android:text="@string/label_CID" />
+            <TextView android:text="@string/label_CID" />
 
             <TextView
                 android:id="@+id/cell_row_CID"
@@ -63,8 +59,7 @@
 
         <TableRow>
 
-            <TextView
-                android:text="@string/label_LAC" />
+            <TextView android:text="@string/label_LAC" />
 
             <TextView
                 android:id="@+id/cell_row_LAC"
@@ -73,8 +68,7 @@
 
         <TableRow>
 
-            <TextView
-                android:text="@string/range" />
+            <TextView android:text="@string/range" />
 
             <TextView
                 android:id="@+id/cell_row_range"
@@ -83,8 +77,7 @@
 
         <TableRow>
 
-            <TextView
-                android:text="@string/status" />
+            <TextView android:text="@string/status" />
 
             <TextView
                 android:id="@+id/cell_row_status"
